[project]
name = "liljon"
version = "0.5.0"
description = "Async-first Robinhood API client library with typed Pydantic models, encrypted token caching, and full CLI"
license = "MIT"
requires-python = ">=3.12"
readme = "README.md"
authors = [
    { name = "Jeff Chappo", email = "jchappo@users.noreply.github.com" },
]
keywords = [
    "robinhood",
    "trading",
    "async",
    "api-client",
    "stocks",
    "options",
    "crypto",
    "futures",
    "finance",
    "pydantic",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Pydantic :: 2",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.0",
    "cryptography>=42.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/jchappo/liljon"
Repository = "https://github.com/jchappo/liljon"
Issues = "https://github.com/jchappo/liljon/issues"

[project.scripts]
liljon = "liljon.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/liljon"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.34",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
